Added a command to toggle trading in case of an exploit

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -25,12 +25,14 @@ locales:
 # Trading Configuration
 #######################
 
+# Whether trading is enabled or not. May be toggled using the /toggletrading command.
+enabled: true
+
 # Disables trading for players with matching IPs. This may prevent fraud by players trading with alt-accounts.
 # Default value: true
 no-trading-with-matching-ip: true
 
 command:
-
   # Change the name of the trade command. This is the command players use to start a trade.
   name: trade
 
